# indoor-robot-urdf

./: .gitignore  README.md
workspace/: .rosinstall
workspace/src/robot_control/: package.xml
workspace/src/robot_control/config/: localization.yaml  robot_control.yaml
workspace/src/robot_control/launch/: robot_control.launch  teleop.launch
workspace/src/robot_description/: CMakeLists.txt  package.xml
workspace/src/robot_description/launch/: description.launch  robot_view.launch
workspace/src/robot_description/rviz/: robot_view.rviz
workspace/src/robot_description/urdf/: robot.urdf.xacro
workspace/src/robot_description/urdf/body/: round_body.urdf.xacro  square_body.urdf.xacro
workspace/src/robot_description/urdf/config/: ball_wheel_config.urdf.xacro  drive_wheel_config.urdf.xacro  imu_sensor_config.urdf.xacro  lidar_sensor_config.urdf.xacro  round_body_config.urdf.xacro  square_body_config.urdf.xacro
workspace/src/robot_description/urdf/plugins/: ros_control_plugin.urdf.xacro
workspace/src/robot_description/urdf/sensors/: imu.gazebo.xacro  lidar.urdf.xacro
workspace/src/robot_description/urdf/utils/: common.urdf.xacro  materials.urdf.xacro
workspace/src/robot_description/urdf/wheels/: ball_wheel.urdf.xacro  drive_wheel.urdf.xacro
workspace/src/robot_gazebo/: CMakeLists.txt  package.xml
workspace/src/robot_gazebo/launch/: gazebo.launch  spawn.launch  world.launch
workspace/src/robot_navigation/: CMakeLists.txt  package.xml
workspace/src/robot_navigation/config/: costmap_common.yaml
workspace/src/robot_navigation/launch/: amcl.launch  amcl_demo.launch  gmapping.launch  gmapping_demo.launch  move_base.launch
