<?xml version="1.0"?>
<package>
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>The robot_control package</description>

  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>MIT-0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <export>
  </export>

</package>
