<?xml version="1.0"?>
<package>
  <name>robot_navigation</name>
  <version>0.0.1</version>
  <description>Robot Navigation</description>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>

  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>MIT-0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
